--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "hbs": "^4.0.6"
+    "hbs": "^4.0.6",
+    "mongoose": "^5.7.7"
   },
   "devDependencies": {},
   "scripts": {
