--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "express": "^4.17.1",
     "hbs": "^4.0.6",
     "mongoose": "^5.7.7"
   },
